/cp 2015-02-13  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/64970
	* decl.c (make_typename_type): Pass tsubst_flags_t argument
	to lookup_template_class.

/testsuite
2015-02-13  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/64970
	* g++.dg/cpp0x/sfinae55.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220684 138bc75d-0d04-0410-961f-82ee72b054a4